testdata/baselines/reference/submodule/compiler/checkTypePredicateForRedundantProperties.errors.txt
checkTypePredicateForRedundantProperties.ts(1,46): error TS2300: Duplicate identifier 'a'.


==== checkTypePredicateForRedundantProperties.ts (1 errors) ====
    function addProp2(x: any): x is { a: string; a: string; } {
                                                 ~
!!! error TS2300: Duplicate identifier 'a'.
        return true;
    }
    